test/1.2/errors/T_ERECPARAM.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

/// ERROR ERECPARAM
parameter a = $b + 1;
/// ERROR ERECPARAM
parameter b = $c + 1;
/// ERROR ERECPARAM
parameter c = $a + 1;
